--- a/data-architect.html
+++ b/data-architect.html
@@ -48,12 +48,12 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://careers-exlservice.icims.com/jobs/7039/data-architect%2C-decision-analytics-services/job'>Data Architect, Decision Analytics Services ... - EXL Service | Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-exlservice.icims.com/jobs/7039/data-architect%2C-decision-analytics-services/job'>Data Architect, Decision Analytics Services ... - EXL Service | Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... Exl Service is now hiring a Data Architect, Decision Analytics Services in San 
 Jose, California. Review all of the job details and apply today!</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oGeX9fwK&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=njwGSKwC&jvi=oGeX9fwK,Job&jvk=Job'>Medidata Solutions Careers - Senior Enterprise Architect</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oGeX9fwK&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=njwGSKwC&jvi=oGeX9fwK,Job&jvk=Job'>Medidata Solutions Careers - Senior Enterprise Architect</a></h5> 
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
@@ -132,7 +132,7 @@ applications?...</p>
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on:: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://quast.workable.com/j/47C941B44F'>Quast Ltd - Jobs: Data Architect - Apply online</a></h5> 
+<h5><a href='https://quast.workable.com/j/47C941B44F'>Quast Ltd - Jobs: Data Architect - Apply online</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -280,11 +280,11 @@ class?...</p>
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q919VfwY&k=Job&j=op9iafwK&__jvst=Employee&__jvsd=su86Ggw9&__jvsc=Twitter&bid=n5gFHKwW'>Quotient Technology Inc. Careers - Architect, Data Platform &amp; Architecture</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q919VfwY&k=Job&j=op9iafwK&__jvst=Employee&__jvsd=su86Ggw9&__jvsc=Twitter&bid=n5gFHKwW'>Quotient Technology Inc. Careers - Architect, Data Platform &amp; Architecture</a></h5> 
 <p><span class="badge badge-light">Mountain View California</span></p>
 <p>Posted on:: 2019-07-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zgfarchitects.applytojob.com/apply/Fg6DnYjGng/Senior-Data-Strategist'>Senior Data Strategist - ZGF Architects - Career Page</a></h5> 
+<h5><a href='http://zgfarchitects.applytojob.com/apply/Fg6DnYjGng/Senior-Data-Strategist'>Senior Data Strategist - ZGF Architects - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -350,7 +350,7 @@ Engineering. Requisition #: WD30072470142. Sr. Software Engineer.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jun 26, 2019 ... Apply online for the job of Data Architect at Girteka Logistics.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/groupm-apac/job/ocqrafwX'>GroupM Careers - Gain Theory | Data Architect Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/groupm-apac/job/ocqrafwX'>GroupM Careers - Gain Theory | Data Architect Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Overview of the job. As Data Architect Manager you are expected to lead the 
 implementation of ETL processes throughout the design, build and maintenance
@@ -364,7 +364,7 @@ implementation of ETL processes throughout the design, build and maintenance
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zgfarchitects.applytojob.com/apply/GZbUKpwPM3/Architectural-Data-Analyst'>Architectural Data Analyst - ZGF Architects - Career Page</a></h5> 
+<h5><a href='http://zgfarchitects.applytojob.com/apply/GZbUKpwPM3/Architectural-Data-Analyst'>Architectural Data Analyst - ZGF Architects - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
